# pdf-agent

./: .dockerignore  .env.example  .gitignore  CLOSURE_CHECKLIST.md  COMMIT_PLAN.md  Dockerfile  Dockerfile.prod  PDF-Agent系统设计.md  RELEASE_ACCEPTANCE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_db.py
alembic/: env.py
frontend/: README.md  index.html  package-lock.json  vite.config.js
nginx/: pdf-agent.conf
scripts/: backup.sh  install_test_deps.sh  qa_local.sh  quality_gate.sh  test_e2e.sh  verify_migrations.sh
tests/: conftest.py  test_agent_api.py  test_agent_graph.py  test_agent_graph_and_adapter_contracts.py  test_all_tools_coverage.py  test_config.py  test_config_policy.py  test_content_disposition_headers.py  test_conversation_api_contracts.py  test_conversation_helper_contracts.py  test_conversation_input_state.py  test_core_metrics_middleware_contracts.py  test_e2e.py  test_executions_api.py  test_external_command_contracts.py  test_file_service_contracts.py  test_filename_generation.py  test_files_api.py  test_files_api_contracts.py  test_high_coverage_tool_contracts.py  test_history_and_legacy_contracts.py  test_idempotency_helpers.py  test_intent_hints.py  test_libreoffice_conversion_guards.py  test_main.py  test_main_runtime_contracts.py  test_migrations.py  test_page_range.py  test_prompt_selected_inputs.py  test_registry.py  test_regressions_real_tools.py  test_release_surface_contracts.py  test_runtime_dependency_policy.py  test_runtime_integrity.py  test_scripts.py  test_smoke_core.py  test_smoke_tools.py  (+9 more)
(+131 files in other folders)
