[project]
name = "pdf-agent"
version = "0.1.0"
description = "PDF Agent Toolbox - A comprehensive PDF processing toolkit"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "pikepdf>=9.0.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "pyhanko>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "psycopg2-binary>=2.9.0",
]
tracing = [
    "langsmith>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_agent"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
